--- a/argo.yml
+++ b/argo.yml
@@ -7,9 +7,10 @@ spec:
   project: default
   source:
     repoURL: https://github.com/akhilesh-patel/argocd-kubernetes-cluster-monitoring.git
-    path: roll  # ✅ Points to folder where kustomization.yaml is located
+    path: app  # Change this to the correct folder where your YAMLs are stored
     targetRevision: HEAD
-    kustomize: {}  # ✅ Enables Kustomize to pick only 'react-app.yml'
+    directory:
+      recurse: true
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
