--- a/app/react-app.yml
+++ b/app/react-app.yml
@@ -3,6 +3,9 @@ kind: Deployment
 metadata:
   name: react-app-deployment
   namespace: monitoring
+  annotations:
+    argocd-image-updater.argoproj.io/image-list: akhileshpatel123/react-app
+    argocd-image-updater.argoproj.io/react-app.update-strategy: latest
 spec:
   replicas: 1
   selector:
@@ -18,6 +21,7 @@ spec:
           image: akhileshpatel123/react-app:latest
           ports:
             - containerPort: 80
+
 ---
 apiVersion: v1
 kind: Service
