--- a/app/react-app.yml
+++ b/app/react-app.yml
@@ -3,11 +3,6 @@ kind: Deployment
 metadata:
   name: react-app-deployment
   namespace: monitoring
-  annotations:
-    argocd-image-updater.argoproj.io/image-list: akhileshpatel123/react-app
-    argocd-image-updater.argoproj.io/react-app.update-strategy: latest
-    argocd-image-updater.argoproj.io/react-app.pull-secret: allow
-    argocd-image-updater.argoproj.io/react-app.check-interval: 1m  # 1 min me check karega
 spec:
   replicas: 1
   selector:
@@ -20,24 +15,7 @@ spec:
     spec:
       containers:
         - name: react-app
-          image: akhileshpatel123/react-app:latest
-          imagePullPolicy: Always  # Ensure new image is always pulled
+          image: akhileshpatel123/react-app:latest  # Use a specific version instead of 'latest'
+          imagePullPolicy: Always  # Ensures the latest image is pulled every time
           ports:
             - containerPort: 80
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: react-app-service
-  namespace: monitoring
-spec:
-  type: NodePort
-  selector:
-    app: react-app
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
-      nodePort: 30080  # Change this if needed
-
