--- a/app/react-app.yml
+++ b/app/react-app.yml
@@ -19,3 +19,19 @@ spec:
           imagePullPolicy: Always  # Ensures the latest image is pulled every time
           ports:
             - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: react-app-service
+  namespace: monitoring
+spec:
+  type: NodePort
+  selector:
+    app: react-app
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+      nodePort: 30080  # Change this if needed
+
