--- a/app/react-app.yml
+++ b/app/react-app.yml
@@ -5,6 +5,7 @@ metadata:
   namespace: monitoring
 spec:
   replicas: 1
+  revisionHistoryLimit: 3
   selector:
     matchLabels:
       app: react-app
